--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <!-- cabecalho -->
-    <header>
+    <header class="sticky">
         <a href="#" class="logo"><img width="50px" src="img/logo.png"></a>
         <ul class="menulist">
             <a href="#home" class="active">Home</a>
@@ -43,7 +43,7 @@
     </header>
 
     <!-- home -->
-     <section class="home" id="home">
+    <section class="home" id="home">
         <div class="home-text">
             <a href="#" class="h-line">
                 <i class="ri-shining-2-line"></i>
@@ -58,11 +58,48 @@
             </div>
 
             <div class="h-btn">
-                <a href="#" class="btn1"></a>
+                <a href="#" class="btn1">
+                    Meus trabalhos
+                    <i class="ri-arrow-right-s-line"></i>
+                </a>
+
+                <a href="#" class="btn2">
+                    Download CV
+                    <i class="ri-download-2-line"></i>
+                </a>
             </div>
         </div>
-     </section>
+    </section>
+    <!-- sobre -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png">
+        </div>
+
+        <div class="about-text">
+            <a href="#" class="h-line">
+                <i class="ri-shining-2-line"></i>
+                <span>Sobre</span>
+            </a>
+            <h2>Mais <span>sobre mim</span></h2>
+            <h5>Olá, eu sou João Vinicius Latczuk, tenho o sonho em me tornar desenvolvedo, gosto muito da parte de programação tanto front-end quanto back-end.</h5>
+            <p>Atualmente estou estudando Analise e desenvolvimento de sistemas, já formado em Segurança da Informação pela Faculdade de Tecnologia de Ourinhos (FATEC-OU). Tendo conhecimento básico em algumas linguagens como C, Python, JavaScript entre outros. Assim possuindo uma lógica de programação moderada, além do conhecimento em Linux adquirido em Segurança da Informação.<br>Fico animado e ansioso para continuar explorando novas oportunidades e conseguir contribuir para grandes projetos.
+                </p>
+            <div class="h-btn"></div>
+                <a href="#" class="btn1">
+                    Meus trabalhos
+                    <i class="ri-arrow-right-s-line"></i>
+                </a>
+
+                <a href="#" class="btn2">
+                    Download CV
+                    <i class="ri-download-2-line"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- aquivo js -->
-     <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
