--- a/index.html
+++ b/index.html
@@ -98,6 +98,125 @@
             </div>
         </div>
     </section>
+    <!--
+    <section class="services" id="services">
+        <div class="sevices-left">
+                <a href="#" class="h-line">
+                    <i class="ri-shining-2-line"></i>
+                    <span>Serviços!</span>
+                </a>
+                <h2>Oque eu tenho há oferecer <span>aos meus Clientes</span></h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div class="h-btn"></div>
+                <a href="#" class="btn1">
+                    Ver todos
+                    <i class="ri-arrow-right-s-line"></i>
+                </a>
+
+                <a href="#" class="btn2">
+                    Download CV
+                    <i class="ri-download-2-line"></i>
+                </a>
+            </div>
+        </div>
+        <div class="services-right">
+            <div class="box">
+                <div class="box-icon">
+                    <i class="ri-brush-line"></i>
+                </div>
+                <div class="box-text">
+                    <h5>Desenvolvimento</h5>
+                    <p>Realizei alguns projetos de desenvolvimento</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-icon">
+                    <i class="ri-mac-line"></i>
+                </div>
+                <div class="box-text">
+                    <h5>Front-end</h5>
+                    <p>Realizei alguns projetos de desenvolvimento</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-icon">
+                    <i class="ri-code-line"></i>
+                </div>
+                <div class="box-text">
+                    <h5>Back-end</h5>
+                    <p>Realizei alguns projetos de desenvolvimento</p>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+    -->
+
+    <!-- portifolio-->
+
+    <section class="portifolio" id="portifolio">
+        <div class="mid-text">
+            <a href="#" class="h-line">
+                <i class="ri-shining-2-line"></i>
+                <span>Portifolio!</span>
+            </a>
+            <h2>Meus ultimos <span>projetos</span></h2>
+        </div>
+
+        <div>
+            <div class="portifolio-content">
+                <div class="row">
+                    <div class="row-img">
+                        <img src="img/p1.jpg">
+                    </div>
+
+                    <div class="row-in">
+                        <div class="row-left">
+                            <h3>Titulo</h3>
+                            <h6>Oque foi utilizado</h6>
+                        </div>
+                        <div class="row-right">
+                            <a href="#"><i class="ri-arrow-right-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="row-img">
+                        <img src="img/p2.jpg">
+                    </div>
+
+                    <div class="row-in">
+                        <div class="row-left">
+                            <h3>Titulo</h3>
+                            <h6>Oque foi utilizado</h6>
+                        </div>
+                        <div class="row-right">
+                            <a href="#"><i class="ri-arrow-right-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="row-img">
+                        <img src="img/p3.jpg">
+                    </div>
+
+                    <div class="row-in">
+                        <div class="row-left">
+                            <h3>Titulo</h3>
+                            <h6>Oque foi utilizado</h6>
+                        </div>
+                        <div class="row-right">
+                            <a href="#"><i class="ri-arrow-right-line"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- aquivo js -->
     <script src="js/script.js"></script>
