--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="h-btn">
-                    <a href="#" class="btn1">
+                    <a href="#portifolio" class="btn1">
                         Meus trabalhos
                         <i class="ri-arrow-right-s-line"></i>
                     </a>
@@ -93,17 +93,15 @@
             <h5>Olá, eu sou João Vinicius Latczuk, tenho o sonho em me tornar desenvolvedo, gosto muito da parte de programação tanto front-end quanto back-end.</h5>
             <p>Atualmente estou estudando Analise e desenvolvimento de sistemas, já formado em Segurança da Informação pela Faculdade de Tecnologia de Ourinhos (FATEC-OU). Tendo conhecimento básico em algumas linguagens como C, Python, JavaScript entre outros. Assim possuindo uma lógica de programação moderada, além do conhecimento em Linux adquirido em Segurança da Informação.<br>Fico animado e ansioso para continuar explorando novas oportunidades e conseguir contribuir para grandes projetos.
                 </p>
-            <div class="h-btn"></div>
-                <a href="#" class="btn1">
+                <a href="#portifolio" class="btn1">
                     Meus trabalhos
                     <i class="ri-arrow-right-s-line"></i>
                 </a>
 
-                <a href="#" class="btn2">
+                <a href="./arq/Curriculo.pdf" class="btn2" download>
                     Download CV
                     <i class="ri-download-2-line"></i>
                 </a>
-            </div>
         </div>
     </section>
     </div>
