erro de digitação

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <span>Sobre</span>
             </a>
             <h2>Mais <span>sobre mim</span></h2>
-            <h5>Olá, eu sou João Vinicius Latczuk, tenho o sonho em me tornar desenvolvedo, gosto muito da parte de programação tanto front-end quanto back-end.</h5>
+            <h5>Olá, eu sou João Vinicius Latczuk, tenho o sonho em me tornar desenvolvedor, gosto muito da parte de programação tanto front-end quanto back-end.</h5>
             <p>Atualmente estou estudando Analise e desenvolvimento de sistemas, já formado em Segurança da Informação pela Faculdade de Tecnologia de Ourinhos (FATEC-OU). Tendo conhecimento básico em algumas linguagens como C, Python, JavaScript entre outros. Assim possuindo uma lógica de programação moderada, além do conhecimento em Linux adquirido em Segurança da Informação.<br>Fico animado e ansioso para continuar explorando novas oportunidades e conseguir contribuir para grandes projetos.
                 </p>
                 <a href="#portifolio" class="btn1">
