botao vms conversar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
 
         <div class="menu-right">
-            <a href="#" class="menu-btn">
+            <a href="#contact" class="menu-btn">
                 <span>Vamos conversar</span>
                 <i class="ri-message-3-line"></i>
             </a>
