--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
     <div class="fade">
     <section class="home" id="home">
             <div class="home-text">
-                <a href="#" class="h-line">
-                    <i class="ri-shining-2-line"></i>
-                    <span>Eu sou Joao Latczuk</span>
-                </a>
                 <h1>Desenvolvedor <br><span class="input"> </span></h1>
                 <h4>Ainda em apreendizado</h4>
                 <div class="social-icons">
@@ -85,10 +81,6 @@
         </div>
 
         <div class="about-text">
-            <a href="#" class="h-line">
-                <i class="ri-shining-2-line"></i>
-                <span>Sobre</span>
-            </a>
             <h2>Mais <span>sobre mim</span></h2>
             <h5>Olá, eu sou João Vinicius Latczuk, tenho o sonho em me tornar desenvolvedor, gosto muito da parte de programação tanto front-end quanto back-end.</h5>
             <p>Atualmente estou estudando Analise e desenvolvimento de sistemas, já formado em Segurança da Informação pela Faculdade de Tecnologia de Ourinhos (FATEC-OU). Tendo conhecimento básico em algumas linguagens como C, Python, JavaScript entre outros. Assim possuindo uma lógica de programação moderada, além do conhecimento em Linux adquirido em Segurança da Informação.<br>Fico animado e ansioso para continuar explorando novas oportunidades e conseguir contribuir para grandes projetos.
@@ -108,10 +100,6 @@
     <!--
     <section class="services" id="services">
         <div class="sevices-left">
-                <a href="#" class="h-line">
-                    <i class="ri-shining-2-line"></i>
-                    <span>Serviços!</span>
-                </a>
                 <h2>Oque eu tenho há oferecer <span>aos meus Clientes</span></h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 <div class="h-btn"></div>
@@ -165,10 +153,10 @@
     <div class="fade">
     <section class="portifolio" id="portifolio">
         <div class="mid-text">
-            <a href="#" class="h-line">
+            <!--<a href="#" class="h-line">
                 <i class="ri-shining-2-line"></i>
                 <span>Portifolio!</span>
-            </a>
+            </a>-->
             <h2>Meus ultimos <span>projetos</span></h2>
         </div>
 
@@ -230,10 +218,6 @@
     <div class="fade">
     <section class="contact" id="contact">
         <div class="contact-main">
-            <a href="#" class="h-line">
-                <i class="ri-shining-2-line"></i>
-                <span>Contatar!</span>
-            </a>
             <h2>Bora <span>conversar</span></h2>
 
             <div class="email">
@@ -247,10 +231,10 @@
             </div>
 
             <div class="social-icons">
-                <a href="#"><i class="ri-linkedin-box-fill"></i></a>
-                <a href="#"><i class="ri-instagram-fill"></i></a>
-                <a href="#"><i class="ri-github-fill"></i></a>
-                <a href="#"><i class="ri-whatsapp-fill"></i></a>
+                <a href="https://www.linkedin.com/in/joao-latczuk/"><i class="ri-linkedin-box-fill"></i></a>
+                <a href="https://www.instagram.com/joaolatczuk/"><i class="ri-instagram-fill"></i></a>
+                <a href="https://github.com/joaolatczuk/"><i class="ri-github-fill"></i></a>
+                <a href=" https://wa.me/14998181004"><i class="ri-whatsapp-fill"></i></a>
             </div>
         </div>
         <form action="https://formsubmit.co/joaocontatoscel@gmail.com" class="contact-form" method="POST">
@@ -262,23 +246,21 @@
             <input type="hidden" name="_next" value="https://joaolatczuk.github.io/index.html">
         </form>
     </section>
-</div>
-    
-
+<div>
     <!-- parte de baixo -->
     <div class="fade">
-    <section class="footer2">
-        
-        <div class="footer">
-            <div class="copyright"> Copyright © 2024 João Vinicius Latczuk. Todos os direitos reservados. </div>
-            <a href="#home" class="scroll-top">
-                <i class="ri-arrow-up-s-line"></i>
-            </a>
-        </div>
-    </section>
+        <section class="footer2">
+            <div class="footer">
+                <div class="copyright"> Copyright © 2024 João Vinicius Latczuk. Todos os direitos reservados. </div>
+                <a href="#home" class="scroll-top">
+                    <i class="ri-arrow-up-s-line"></i>
+                </a>
+            </div>
+        </section>
+    </div>
 </div>
 
-    <!-- aquivo js -->
-    <script src="js/script.js"></script>
+<!-- aquivo js -->
+<script src="js/script.js"></script>
 </body>
 </html>
