Botão modo dark!

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 
 </head>
-<body>
+<body class="">
     <!-- cabecalho -->
     <header class="sticky">
-        <a href="#" class="logo"><img width="50px" src="img/logo.png"></a>
+        <a href="#" class="logo"><img id="imagem" width="50px" src="img/logo-dark.png"></a>
         <ul class="menulist">
             <a href="#home" class="active">Home</a>
             <a href="#about">Sobre</a>
@@ -34,6 +34,14 @@
             <a href="#portifolio">Portifolio</a>
             <a href="#contact">Contatos</a>
         </ul>
+
+        <div class="dark">
+            <div class="btn_indicator">
+                <div class="btn_icon_container">
+                    <i class="btn_icon ri-sun-fill"></i>
+                </div>
+            </div>
+        </div>
 
         <div class="menu-right">
             <a href="#contact" class="menu-btn">
