Atualização dos projetos

--- a/index.html
+++ b/index.html
@@ -167,25 +167,33 @@
             </a>-->
             <h2>Meus ultimos <span>projetos</span></h2>
         </div>
-
         <div>
             <div class="portifolio-content">
                 <div class="row">
                     <div class="row-img">
                         <img src="img/p1.png">
                     </div>
-
+                    
                     <div class="row-in">
-                        <div class="row-left">
-                            <h3>Projetos em realização</h3>
-                            <h6></h6>
+                        <div class="row-left"> 
+                            <h3>Portifolio</h3>
+                            <h6>No projeto utilizei algumas tecnologias que me ajudarão no futuro. Além da implementação de algumas funções como redirecionamento para o whatsapp, disponibilização do modo white ou dark.</h6>
+                            <br>
+                            <h3>Tecnologias utilizadas</h3>
+                            <div class="tec">
+                                <img src="./img/tecnologias/css.png">
+                                <img src="./img/tecnologias/html5.png">
+                                <img src="./img/tecnologias/javascript.png">
+                                <img src="./img/tecnologias/git.png">
+                                <img src="./img/tecnologias/github.png">
+                            </div>
                         </div>
                         <div class="row-right">
                             <a href="#"><i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
                 </div>
-
+                <!--
                 <div class="row">
                     <div class="row-img">
                         <img src="img/p2.png">
@@ -210,13 +218,13 @@
                     <div class="row-in">
                         <div class="row-left">
                             <h3>Projetos em realização</h3>
-                            <!--<h6>Oque foi utilizado</h6>-->
+                            <h6>Oque foi utilizado</h6>
                         </div>
                         <div class="row-right">
                             <a href="#"><i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
