Atualização do icone do github para as variações de white/black

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <img src="./img/tecnologias/html5.png">
                                 <img src="./img/tecnologias/javascript.png">
                                 <img src="./img/tecnologias/git.png">
-                                <img src="./img/tecnologias/github.png">
+                                <img id="imagem2" src="./img/tecnologias/github.png">
                             </div>
                         </div>
                         <div class="row-right">
